@@ -3,45 +3,67 @@ package br.com.ecologica.service;
 import br.com.ecologica.cadastros.CadastroEmpresasRecicladoras;
 import br.com.ecologica.dto.SolicitacaoRequest;
 import br.com.ecologica.dto.SolicitacaoResponse;
+import br.com.ecologica.exception.ResourceNotFoundException;
+import br.com.ecologica.model.StatusSolicitacao;
 import br.com.ecologica.model.Usuario;
 import br.com.ecologica.repository.CadastroEmpresasRecicladorasRepository;
 import br.com.ecologica.repository.SolicitacoesRepository;
 import br.com.ecologica.repository.UsuarioRepository;
 import br.com.ecologica.visualizacao.VisualizacaoSolicitacoes;
-
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class SolicitacoesService {
 
-    @Autowired
-    private SolicitacoesRepository repository;
-    @Autowired
-    private UsuarioRepository usuarioRepository;
-    @Autowired
-    private CadastroEmpresasRecicladorasRepository recicladoraRepository;
+    private final SolicitacoesRepository repository;
+    private final UsuarioRepository usuarioRepository;
+    private final CadastroEmpresasRecicladorasRepository recicladoraRepository;
 
+    public SolicitacoesService(
+            SolicitacoesRepository repository,
+            UsuarioRepository usuarioRepository,
+            CadastroEmpresasRecicladorasRepository recicladoraRepository) {
+        this.repository = repository;
+        this.usuarioRepository = usuarioRepository;
+        this.recicladoraRepository = recicladoraRepository;
+    }
+
+    @Transactional
     public VisualizacaoSolicitacoes criarSolicitacao(SolicitacaoRequest request) {
         Usuario usuario = usuarioRepository.findById(request.getIdUsuario())
-                .orElseThrow(() -> new RuntimeException("Usuário não encontrado"));
-        
+                .orElseThrow(() -> new ResourceNotFoundException("Usuario nao encontrado."));
+
         CadastroEmpresasRecicladoras recicladora = recicladoraRepository.findById(request.getIdRecicladora())
-                .orElseThrow(() -> new RuntimeException("Recicladora não encontrada"));
+                .orElseThrow(() -> new ResourceNotFoundException("Recicladora nao encontrada."));
 
         VisualizacaoSolicitacoes solicitacao = new VisualizacaoSolicitacoes();
         solicitacao.setUsuario(usuario);
         solicitacao.setEmpresaRecicladora(recicladora);
         solicitacao.setDescricao(request.getDescricao());
+        solicitacao.setStatus(StatusSolicitacao.pendente);
         return repository.save(solicitacao);
     }
 
-    public List<SolicitacaoResponse> obterSolicitacoes(Long usuarioId) {
-        return repository.findByUsuarioId(usuarioId)
-                .stream()
+    public List<SolicitacaoResponse> obterSolicitacoesUsuario(Long usuarioId) {
+        return repository.findByUsuarioId(usuarioId).stream()
                 .map(SolicitacaoResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<SolicitacaoResponse> obterSolicitacoesRecicladora(Long recicladoraId) {
+        return repository.findByEmpresaRecicladora_Id(recicladoraId).stream()
+                .map(SolicitacaoResponse::fromEntity)
+                .toList();
+    }
+
+    @Transactional
+    public VisualizacaoSolicitacoes atualizarStatus(Long id, StatusSolicitacao status) {
+        VisualizacaoSolicitacoes solicitacao = repository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Solicitacao nao encontrada."));
+        solicitacao.setStatus(status);
+        return repository.save(solicitacao);
     }
 }
